<resources>
    <string name="app_name">TaskDoc</string>
    <string name="app_subName">프로젝트 통합 관리 시스템</string>
    <string name="ko_ok">확인</string>
    <string name="login_sign_in">로그인</string>
    <string name="login_sign_id">ID</string>
    <string name="login_sign_pw">PASSWORD</string>
    <string name="create_user">회원가입</string>
    <string name="create_user_id">아이디</string>
    <string name="create_user_pw">비밀번호</string>
    <string name="create_user_pw_ch">비밀번호 확인</string>
    <string name="create_user_name">이름</string>
    <string name="create_user_phone">전화번호</string>
    <string name="create_user_warning">비밀번호가 일치하지 않습니다.</string>
    <string name="create_user_banner">Already registred! Login Me.</string>
    <string name="my_info_banner">TASKDOC (은)는 개인정보 방침을 준수합니다.</string>
    <string name="my_info_method_banner">방법론의 리스트는 게시판(COMMUNICATION BOARD) 탭에서 추가 할 수 있습니다.</string>
    <string name="nav_header_title">Task Doc</string>
    <string name="nav_header_subtitle">업무 관리 시스템</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="method_list_banner">추가한 리스트가 없습니다.</string>
    <string name="method_board_banner">목록이 없습니다.</string>
    <string name="method_board_nav_title">방법론 게시판</string>
    <string name="method_board_nav_banner">해당 게시물은 게시자가 직접 관리 합니다.</string>


    <string name="title">제목 입력</string>
    <string name="contents">내용 입력</string>

    <!-- Strings related to project progress -->
    <string name="title_activity_project_progress">ProjectProgress</string>
    <string name="tab_text_1">대화방</string>
    <string name="tab_text_2">업무리스트</string>
    <string name="tab_text_3">파일 모아보기</string>
    <string name="tab_text_4">설정</string>
    <string name="tab_config_text_1">내가 올린 게시글</string>
    <string name="tab_config_text_2">내가 올린 자료들</string>
    <string name="tab_config_text_3">회원 탈퇴</string>
    <string name="tab_progress_text_1">채팅방</string>
    <string name="tab_progress_text_2">업무리스트</string>
    <string name="tab_progress_text_3">파일리스트</string>
    <string name="tab_progress_text_4">내 정보</string>
    <string name="tab_task_text_1">리스트</string>
    <string name="tab_task_text_2">진행도</string>
    <string name="collabor">인원 추가</string>
    <string name="search">내용 검색</string>
    <string name="file">파일 업로드</string>
    <string name="focus">회의방 개설</string>
    <string name="decision">투표 개설</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Material Calendar -->
    <string name="material_calendar_monday">M</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">W</string>
    <string name="material_calendar_thursday">T</string>
    <string name="material_calendar_friday">F</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">S</string>

    <array name="material_calendar_months_array">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </array>

    <string name="material_calendar_today_button">오늘</string>
    <string name="material_calendar_positive_button">선택</string>
    <string name="material_calendar_negative_button">취소</string>
    <string name="title_activity_method_board_view">MethodBoardViewActivity</string>
    <string name="title_activity_method_board_add">MethodBoardAddActivity</string>
    <string name="title_activity_method_board_my">MethodBoardMyActivity</string>
    <string name="title_activity_chating">ChatingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_gantt_chart">GanttChartActivity</string>

</resources>
