<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".display.activity.CreateUserActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/create_user"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/create_user_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/create_user_warning"
            android:textColor="@color/colorWarning"
            android:textSize="11sp"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/create_user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:hint="@string/create_user_id"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/create_user_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:hint="@string/create_user_pw"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/create_user_pw_ch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:hint="@string/create_user_pw_ch"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/create_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:hint="@string/create_user_name"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/create_user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:hint="@string/create_user_phone"
                android:singleLine="true"
                android:inputType="phone"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Button
                android:id="@+id/create_user_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/ko_ok"
                tools:ignore="OnClick"
                tools:targetApi="lollipop" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorSubPrimary"
                android:text="@string/create_user_banner"
                android:textAlignment="center"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>