<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/custom_form_login_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_sign_id"
                android:singleLine="true" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/custom_form_login_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textPassword"
                android:hint="@string/login_sign_pw" />


        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/custom_form_login_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorOpacity"
        android:onClick="login"
        android:text="@string/login_sign_in"
        android:textSize="20sp" />

    <Button
        android:id="@+id/custom_form_login_create_button"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorOpacity"
        android:textColor="@color/colorSubPrimary"
        android:onClick="create"
        android:text="@string/create_user" />

</LinearLayout>