<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".display.transitions.progress.Tab1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fragment"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorBlack"/>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            app:tabTextColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/img_chat"
                android:text="@string/tab_progress_text_1" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem2"
                android:icon="@drawable/img_task_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_progress_text_2" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem3"
                android:icon="@drawable/img_file_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_progress_text_3" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem4"
                android:icon="@drawable/img_user_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_progress_text_4" />

        </android.support.design.widget.TabLayout>
    </LinearLayout>

</FrameLayout>